Fixed issue with sticky nav not working by adding max-w to body and put overflow-x on just portfolio container. Added styling for full size nav.

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
-html,
+/* html,
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   scroll-behavior: smooth;
-}
-
+} */
+/* Added max width on body to fix overflow issues on portfolio page */
 body {
-  width: 100vw;
+  max-width: 100vw;
   /* height: 100vh; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   padding: 0;
   margin: 0;
   display: flex;
@@ -20,8 +20,9 @@ body {
 #root {
   color: rgb(107 114 128);
   max-width: 1280px;
-  /* margin: 2rem auto;
-  padding: 2rem; */
+  margin: 0 auto;
+  /* padding: 0 2rem; */
+  /* box-sizing: border-box; */
   border-radius: 8px;
   text-align: center;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -41,6 +42,12 @@ body {
     /* padding: 1rem; */
   }
 }
+/* @media screen and (min-width: 768px) {
+  html,
+  body {
+    overflow-x: visible;
+  }
+} */
 
 @media (prefers-color-scheme: dark) {
   #root {
@@ -49,10 +56,10 @@ body {
   }
 }
 
-@media screen and (min-width: 640px) {
+/* @media screen and (min-width: 640px) {
   .text-placeholder {
     color: #6b7280;
-    /* display: flex;
-    flex-direction: row; */
+    display: flex;
+    flex-direction: row;
   }
-}
+} */
